SigmaCodebackup3rdSep/objects/Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Add_cost__c</fullName>
        <label>Add cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppointmentDate__c</fullName>
        <label>AppointmentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_Slots__c</fullName>
        <formula>Total_Slots__c  -  Booked_Slots__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Slots</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booked_Slots__c</fullName>
        <label>Booked Slots</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Value__c</fullName>
        <formula>Text(DAY( AppointmentDate__c ))</formula>
        <label>Date Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <defaultValue>(50)</defaultValue>
        <label>deposit amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration_Interval__c</fullName>
        <label>Duration Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_amount__c</fullName>
        <formula>IF( Deposit__c  &gt; 0,  Deposit__c , Total_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_cost__c</fullName>
        <label>Service cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Booking Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>1:00</fullName>
                </value>
                <value>
                    <fullName>1:30</fullName>
                </value>
                <value>
                    <fullName>2:00</fullName>
                </value>
                <value>
                    <fullName>2:30</fullName>
                </value>
                <value>
                    <fullName>3:00</fullName>
                </value>
                <value>
                    <fullName>3:30</fullName>
                </value>
                <value>
                    <fullName>4:00</fullName>
                </value>
                <value>
                    <fullName>4:30</fullName>
                </value>
                <value>
                    <fullName>5:00</fullName>
                </value>
                <value>
                    <fullName>5:30</fullName>
                </value>
                <value>
                    <fullName>6:00</fullName>
                </value>
                <value>
                    <fullName>7:00</fullName>
                </value>
                <value>
                    <fullName>7:30</fullName>
                </value>
                <value>
                    <fullName>8:00</fullName>
                </value>
                <value>
                    <fullName>8:30</fullName>
                </value>
                <value>
                    <fullName>9:00</fullName>
                </value>
                <value>
                    <fullName>9:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Service_cost__c  +  Add_cost__c  +  Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Slots__c</fullName>
        <label>Total Slots</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Day__c</fullName>
        <formula>CASE( MOD( AppointmentDate__c - DATE(1900, 1, 7), 7),  1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;, &quot;Sunday&quot;)</formula>
        <label>Week Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>period_of_time__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MORNING</fullName>
                </value>
                <value>
                    <fullName>AFTERNOON</fullName>
                </value>
                <value>
                    <fullName>EVENING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>AppointmentDate__c</columns>
        <columns>Available_Slots__c</columns>
        <columns>period_of_time__c</columns>
        <columns>Duration__c</columns>
        <columns>Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>